fix: edit z-index for circles

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 
 .circle__one:hover {
     background-color:teal;
-    z-index: 6;
+    z-index: 7;
 }
 
 .circle__two {
@@ -39,7 +39,7 @@
 
 .circle__two:hover {
     background-color:yellow;
-    z-index: 6;
+    z-index: 7;
 }
 
 .circle__three { 
@@ -49,7 +49,7 @@
 
 .circle__three:hover {
     background-color:orange;
-    z-index: 6;
+    z-index: 7;
 }
 
 .circle__four { 
@@ -60,5 +60,15 @@
 
 .circle__four:hover {
     background-color:navy;
+    z-index: 7;
+}
+
+.square__big {
+    position: absolute;
+    top: 15%;
+    left: 15%;
     z-index: 6;
+    width: 70%;
+    height: 70%;
+    background:blue;
 }
